--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
 						<div class="col-md-8">
 							<div class="card-body">
 							<h5 class="card-title">Building Virtual Worlds</h5>
-							<p class="card-text">Description</p>
+							<p class="card-text">Semester-long project-based course</p>
 							</div>
 						</div>
 					</div>
@@ -30,12 +30,12 @@
 				<div class="card mb-5 transparentCard">
 					<div class="row g-0">
 						<div class="col-md-4">
-							<img class="img-fluid" src="Assets/Index/LetsBounce.png" alt="Let's Bounce">
+							<img class="img-fluid" src="Assets/Index/MarbleGame.png" alt="Marble Game">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
 							<h5 class="card-title">Marble Game</h5>
-							<p class="card-text">Description</p>
+							<p class="card-text">Personal project</p>
 							</div>
 						</div>
 					</div>
@@ -45,12 +45,12 @@
 				<div class="card mb-5 transparentCard">
 					<div class="row g-0">
 						<div class="col-md-4">
-							<img class="img-fluid" src="Assets/Index/LetsBounce.png" alt="Let's Bounce">
+							<img class="img-fluid" src="Assets/Index/FearlessFlyer.png" alt="Fearless Flyer">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
-								<h5 class="card-title">Old Men With Kites</h5>
-								<p class="card-text">Description</p>
+								<h5 class="card-title">Fearless Flyer</h5>
+								<p class="card-text">Semester-long academic project for the Oculus Go</p>
 							</div>
 						</div>
 					</div>
@@ -60,12 +60,12 @@
 				<div class="card mb-5 transparentCard">
 					<div class="row g-0">
 						<div class="col-md-4">
-							<img class="img-fluid" src="Assets/Index/LetsBounce.png" alt="Let's Bounce">
+							<img class="img-fluid" src="Assets/Index/LemmingsInVR.png" alt="Let's Bounce">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
 								<h5 class="card-title">Lemmings in VR</h5>
-								<p class="card-text">Description</p>
+								<p class="card-text">Academic project recreating the classic game Lemmings for HTC Vive</p>
 							</div>
 						</div>
 					</div>
