--- a/MarbleGame.html
+++ b/MarbleGame.html
@@ -9,7 +9,12 @@
     </head>
 
     <body>
-
+		<div class="bgRect">
+			<a href="Index.html" class="btn btn-secondary backButton">Back</a>
+			<h1 id="myhead" class="text-center">Marble Game</h1>
+			<iframe src="https://www.youtube.com/embed/XahiEhwyzEE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<p class="p-project">This is a personal rogue-like/arcade style game project. I have created everything including a series of randomly generated levels with interactable objects, a physics-based damage system, an upgrade system with various abilities, multiple playable characters, enemies, and bosses. My goal is to continue developing this into a full-featured game.</p>
+		</div>
     </body>
     
 </html>
