--- a/BVW.html
+++ b/BVW.html
@@ -12,7 +12,7 @@
 		<div class="bgRect">
 			<a href="Index.html" class="btn btn-secondary backButton">Back</a>
 			<h1 id="myhead" class="text-center">Building Virtual Worlds</h1>
-			<p class="p-project">I participated as a programmer in Building Virtual Worlds, an intensive project-based course at the Entertainment Technology Center. Over the course of one semester, I made five game projects with multidisciplinary 5-person teams. On average, we had 2 weeks per assignment. Two of my team projects, Tone of Freedom and Let's Bounce, were featured in the ETC's virtual festival.</p>
+			<p class="p-project">Date: September - December 2020<br><br>I participated as a programmer in Building Virtual Worlds, an intensive project-based course at the Entertainment Technology Center. Over the course of one semester, I made five game projects with multidisciplinary 5-person teams. On average, we had 2 weeks per assignment. Two of my team projects, Tone of Freedom and Let's Bounce, were featured in the ETC's virtual festival.</p>
 			<iframe src="https://www.youtube.com/embed/FapmhZfI1qg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<p class="p-project">Let's Bounce is a networked multiplayer game for up to 6 people. I designed and programmed the movement system, icons and special abilities. I focused on creating a framework that allowed for chain reactions and surprising twists in gameplay.</p>
 			<iframe src="https://www.youtube.com/embed/NyVpdCej7lg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
