--- a/OldMenWithKites.html
+++ b/OldMenWithKites.html
@@ -12,6 +12,7 @@
 		<div class="bgRect">
 			<a href="Index.html" class="btn btn-secondary backButton">Back</a>
 			<h1 id="myhead" class="text-center">Fearless Flyer</h1>
+			<p class="p-project">Date: January - May 2019</p>
 			<iframe src="https://www.youtube.com/embed/LZtRFIk72oU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<p class="p-project">Fearless Flyer is an infinite runner for the Oculus Go. It was a semester-long academic project which I completed on a team of 5 students. You play as an old man in a wheelchair who is getting pulled down the street by a kite. I programmed the world generation and the upgrade system.</p>
 		</div>
