--- a/BVW.html
+++ b/BVW.html
@@ -10,7 +10,7 @@
 
     <body>
 		<div class="bgRect">
-			<a href="Index.html" class="btn btn-secondary backButton">Back</a>
+			<a href="index.html" class="btn btn-secondary backButton">Back</a>
 			<h1 id="myhead" class="text-center">Building Virtual Worlds</h1>
 			<p class="p-project">Date: September - December 2020<br><br>I participated as a programmer in Building Virtual Worlds, an intensive project-based course at the Entertainment Technology Center. Over the course of one semester, I made five game projects with multidisciplinary 5-person teams. On average, we had 2 weeks per assignment. Two of my team projects, Tone of Freedom and Let's Bounce, were featured in the ETC's virtual festival.</p>
 			<iframe src="https://www.youtube.com/embed/FapmhZfI1qg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
