--- a/Lemmings.html
+++ b/Lemmings.html
@@ -10,7 +10,7 @@
 
     <body>
 		<div class="bgRect">
-			<a href="Index.html" class="btn btn-secondary backButton">Back</a>
+			<a href="index.html" class="btn btn-secondary backButton">Back</a>
 			<h1 id="myhead" class="text-center">Lemmings in VR</h1>
 			<p class="p-project">Date: November - December 2018</p>
 			<iframe src="https://www.youtube.com/embed/Unv_ytLBJ2Y" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
