--- a/MarbleGame.html
+++ b/MarbleGame.html
@@ -10,7 +10,7 @@
 
     <body>
 		<div class="bgRect">
-			<a href="Index.html" class="btn btn-secondary backButton">Back</a>
+			<a href="index.html" class="btn btn-secondary backButton">Back</a>
 			<h1 id="myhead" class="text-center">Marble Game</h1>
 			<p class="p-project">Date: Ongoing</p>
 			<iframe src="https://www.youtube.com/embed/XahiEhwyzEE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
