--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
 	<body>
 		<h1 id="myhead" class="text-center">Thomas Wrabetz</h1>
 		<div class="container">
+			<a href="ArtTherapy.html">
+				<div class="card mb-5 transparentCard">
+					<div class="row g-0">
+						<div class="col-md-4">
+							<img class="img-fluid" src="Assets/Index/ArtTherapy.png" alt="Art Therapy">
+						</div>
+						<div class="col-md-8">
+							<div class="card-body">
+								<h5 class="card-title">Art Therapy</h5>
+								<p class="card-text">ETC Project</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</a>
 			<a href="BVW.html">
 				<div class="card mb-5 transparentCard">
 					<div class="row g-0">
@@ -19,8 +34,8 @@
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
-							<h5 class="card-title">Building Virtual Worlds</h5>
-							<p class="card-text">Semester-long project-based course</p>
+								<h5 class="card-title">Building Virtual Worlds</h5>
+								<p class="card-text">Semester-long project-based course</p>
 							</div>
 						</div>
 					</div>
@@ -34,8 +49,8 @@
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
-							<h5 class="card-title">Marble Game</h5>
-							<p class="card-text">Personal project</p>
+								<h5 class="card-title">Marble Game</h5>
+								<p class="card-text">Personal project</p>
 							</div>
 						</div>
 					</div>
