--- a/MarbleGame.html
+++ b/MarbleGame.html
@@ -12,9 +12,9 @@
 		<div class="bgRect">
 			<a href="index.html" class="btn btn-secondary backButton">Back</a>
 			<h1 id="myhead" class="text-center">Marble Game</h1>
-			<p class="p-project">Date: Ongoing</p>
+			<p class="p-project">Date: 2018 - On Hold</p>
 			<iframe src="https://www.youtube.com/embed/XahiEhwyzEE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			<p class="p-project">This is a personal rogue-like/arcade style game project. I have created everything including a series of randomly generated levels with interactable objects, a physics-based damage system, an upgrade system with various abilities, multiple playable characters, enemies, and bosses. My goal is to continue developing this into a full-featured game.</p>
+			<p class="p-project">This is a personal rogue-like/arcade style game project. I have created everything including a series of randomly generated levels with interactable objects, a physics-based damage system, an upgrade system with various abilities, multiple playable characters, enemies, and bosses.</p>
 		</div>
     </body>
     
