--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
 	<body>
 		<h1 id="myhead" class="text-center">Thomas Wrabetz</h1>
 		<div class="container">
+			<a href="Macedonia.html">
+				<div class="card mb-5 transparentCard">
+					<div class="row g-0">
+						<div class="col-md-4">
+							<img class="img-fluid" src="Assets/Index/Macedonia.png" alt="Macedonia">
+						</div>
+						<div class="col-md-8">
+							<div class="card-body">
+								<h5 class="card-title">Macedonia</h5>
+								<p class="card-text">Personal Project</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</a>
 			<a href="ArtTherapy.html">
 				<div class="card mb-5 transparentCard">
 					<div class="row g-0">
