--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 	</head>
 
 	<body>
-		<h1 id="myhead" class="text-center">Thomas Wrabetz</h1>
+		<h1 id="mainHead" class="text-center">Thomas Wrabetz</h1>
 		<div class="container">
 			<a href="Macedonia.html">
 				<div class="card mb-5 transparentCard">
 					<div class="row g-0">
 						<div class="col-md-4">
-							<img class="img-fluid" src="Assets/Index/Macedonia.png" alt="Macedonia">
+							<img class="img-fluid" src="Assets/Index/Macedonia2.png" alt="Macedonia">
 						</div>
 						<div class="col-md-8">
 							<div class="card-body">
-								<h5 class="card-title">Macedonia</h5>
-								<p class="card-text">Personal Project</p>
+								<h3 class="card-title extra-padding  baskerville">Macedonia</h3>
+								<p class="card-text">Personal project to create a game where fruits fight each other</p>
+								<p class="card-text p-pills">Highlights: Gameplay Programming, Tools Programming</p>
 							</div>
 						</div>
 					</div>
@@ -36,6 +37,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Art Therapy</h5>
 								<p class="card-text">ETC Project</p>
+								<p class="card-text p-pills">Highlights: Networked Multiplayer, VR</p>
 							</div>
 						</div>
 					</div>
@@ -51,6 +53,7 @@
 							<div class="card-body">
 								<h5 class="card-title">Building Virtual Worlds</h5>
 								<p class="card-text">Semester-long project-based course</p>
+								<p class="card-text p-pills">Highlights: Game Design</p>
 							</div>
 						</div>
 					</div>
